force-app/main/default/objects/Gearset__c/Gearset__c.object-meta.xml
<CustomObject>
    <label>Gearset</label>
    <nameField>
        <displayFormat>GID-{0000}</displayFormat>
        <label>Gearset Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gearsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>