force-app/main/default/objects/Gearset__c/fields/Number2__c.field-meta.xml
<CustomField>
    <fullName>Number2__c</fullName>
    <label>Number2</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>